v1.12.5
--------------------------------------------------------------------------------
 * Analyzing PR63170 more, mod_proxy_http2 needs to differentiate between its hosting
   stream gone and its master connection gone. The later is terminal, the former is not.
 * mod_proxy_http2: ping the other side of an idle connection only when not already
   waiting on a PING response.

v1.12.4
--------------------------------------------------------------------------------
 * Fixed an issue where a proxy_http2 handler entered an infinit loop when encountering
   certain errors on the backend connection. 
   See <https://bz.apache.org/bugzilla/show_bug.cgi?id=63170>.

v1.12.3
--------------------------------------------------------------------------------
 * fixed bug in nghttp output parsing that filters now Frames sent/received inbetween
   response body DATA. 
 * added test cases for nghttp output parsing which is screen scraping, so controlled
   failure make debugging issues easier
 * fixed an issue with curl detecting when configure --with-curl=path was used.
 * added multi-resource retrieval tests via nghttp -a
 * added Test for the h2 status handler
 * More POST and form upload tests with nghttp client
 * added POST tests in a http: proxied setup

v1.12.2
--------------------------------------------------------------------------------
 * Fixed keepalives counter on slave connections.

v1.12.1
--------------------------------------------------------------------------------
 * Fixed Bug introduce in v1.12.0 where mod_proxy_http2 no longer set the server name
   on new backend connections.
 * Fixed issue where mod_proxy_http2 would trigger an invalid internal state when retrying requests.
 * applied patch for #167 provided by Michael Kaufmann (@mkauf) about errors on
   HEAD requests (h2 streams not closed cleanly), for example those served by mod_cgid.

v1.12.0
--------------------------------------------------------------------------------